# UP

./: '  .gitignore  :w  =  CMakeLists.txt  README.md
algorithms/: CMakeLists.txt
algorithms/machine_learning/: .pytest.py.swo  .pytest.py.swp  CMakeLists.txt  README.md  pytest.py  pytest_function.py  pytest_network.py  reinforcement_learning_continuous_outputs.py  reinforcement_learning_single_output_test.py  reinforcement_learning_test.py  supervised_learning_test.py
algorithms/machine_learning/bridge_lcm_types/: python_to_simulation.lcm
algorithms/machine_learning/include/: DynSimulation.hpp  SimObjectLoader.hpp
algorithms/machine_learning/python_bridge/: pycheetah.cpp  pycheetah.i  pycheetah.py  python_bridge.cpp
algorithms/machine_learning/scripts/: lcm_generation.sh  swig_wrap_generation.sh
algorithms/machine_learning/src/: CheetahSim.cpp  DynSimulation.cpp  SimCheckerBoard.cpp  SimDrawList.cpp
algorithms/optimization/: CMakeLists.txt  main.cpp
algorithms/optimization/config/: optimization_setup.yaml
algorithms/optimization/height_map/: CMakeLists.txt  HeightMap.hpp  SeparateTerrain.hpp
algorithms/optimization/include/: Cheetah3StairFootLoc.hpp  Cheetah3StairForward.hpp  Cheetah3StairTop.hpp  FootLocPreference.hpp  WalkingFootLoc.hpp  WalkingForward.hpp  WalkingOrientation.hpp  WalkingPitch.hpp
algorithms/optimization/matlab/: draw_heightmap.m  plat_terrain.m~
algorithms/optimization/python/: plot_traj.py
algorithms/optimization/src/: BodyAccMin.cpp  Cheetah3StairFootLoc.cpp  Cheetah3StairForward.cpp  (+6 more)
algorithms/path_planning/: CMakeLists.txt  test_main.cpp
algorithms/traj_optimization/: CMakeLists.txt  README.md
common/: CMakeLists.txt
common/FootstepPlanner/: GraphSearch.cpp  GraphSearch.h
common/include/: ActuatorModel.h  Cheetah3.h  Collision.h  CollisionBox.h  CollisionPlane.h  ContactConstraint.h  ContactImpulse.h  ContactSpringDamper.h  ControlParameters.h  DriverCommand.h  DynamicsSimulator.h  FloatingBaseModel.h  GamepadCommand.h  IMUTypes.h  ImuSimulator.h  LegController.h  MathUtilities.h  MiniCheetah.h  Quadruped.h  RobotParameters.h  SharedMemory.h  SimulatorMessage.h  SimulatorParameters.h  SpatialInertia.h  SpineBoard.h  Timer.h  Types.h  Utilities_print.h  articulated_body_algorithm.h  cTypes.h  collision_model.h  cppTypes.h  dynamics_simulator_cpp.txt  dynamics_simulator_h.txt  orientation_tools.h  spatial.h  utilities.h
common/src/: CollisionBox.cpp  CollisionPlane.cpp  ContactConstraint.cpp  ContactImpulse.cpp  ContactSpringDamper.cpp  ControlParameterInterface.cpp  ControlParameters.cpp  DynamicsSimulator.cpp  FloatingBaseModel.cpp  ImuSimulator.cpp  LegController.cpp  Quadruped.cpp  SpineBoard.cpp  orientation_tools.h  spatial.h  utilities.cpp
common/test/: test_ControlParameters.cpp  test_ImuSimulator.cpp  test_Ipopt.cpp  test_JCQP.cpp  test_LegController.cpp  test_actuatorModel.cpp  test_casadi.cpp  test_cheetah3_model.cpp  test_contact.cpp  test_dataspline.txt  test_dynamics.cpp  test_filters.cpp  test_goldfarb.cpp  test_ipopt.cpp  test_math.cpp  test_mini_cheetah_model.cpp  test_orientation_tools.cpp  test_periodic_tasks.cpp  test_sharedMemory.cpp  test_spatial.cpp  test_spline.cpp  test_trot_path.cpp  test_utilities.cpp  test_yaml.cpp  wo_test_JCQP.cpp  wo_test_spline.cpp
footplan-viewer/: CMakeLists.txt
footplan-viewer/include/: FootplanWindow.h
footplan-viewer/src/: FootplanWindow.cpp  footplan_viewer.cpp
machine_learning/: CMakeLists.txt  pytest.py
machine_learning/bridge_lcm_types/: simulation_to_python.lcm
machine_learning/include/: DynSimulation.hpp  SimCheckerBoard.hpp  SimDrawList.hpp  SimGraphics3D.hpp
machine_learning/openai_environment/: cheetah_env.py
machine_learning/python_bridge/: pycheetah.cpp  pycheetah.i  pycheetah.py  python_bridge.cpp
machine_learning/scripts/: lcm_generation.sh  swig_wrap_generation.sh
machine_learning/src/: CheetahSim.cpp  SimGraphics3D.cpp  SimObjectLoader.cpp
robot/: CMakeLists.txt
robot/FSM_States/: FSM_State.cpp  FSM_State.h  FSM_State_BalanceStand.cpp  FSM_State_BalanceStand.h  FSM_State_DoNothing.cpp  FSM_State_DoNothing.h  FSM_State_ImpedanceControl.cpp  FSM_State_ImpedanceControl.h  FSM_State_JointPD.cpp  FSM_State_JointPD.h  FSM_State_Locomotion.cpp  FSM_State_Locomotion.h  FSM_State_Passive.cpp  FSM_State_Passive.h  FSM_State_StandUp.h
robot/WBC/: CMakeLists.txt  ContactSpec.hpp  Task.hpp  WBC.hpp
robot/WBC_States/: CMakeLists.txt  Cheetah_DynaCtrl_Definition.h  Controller.hpp  StateProvider.cpp  StateProvider.hpp  Test.cpp  Test.hpp
robot/include/: ControlFSM.h  ControlFSMData.h  HardwareBridge.h  HardwareInterface.h  JPosInitializer.h  RobotController.h  RobotRunner.h  SafetyChecker.h  SimulationBridge.h  SimulationDriver.h  main.h  main_helper.h
robot/src/: ControlFSM.cpp  HardwareBridge.cpp  HardwareInterface.cpp  JPosInitializer.cpp  RobotController.cpp  RobotRunner.cpp  SafetyChecker.cpp  SimulationBridge.cpp  SimulationDriver.cpp  main.cpp  main_helper.cpp
sim/: CMakeLists.txt
sim/include/: Checkerboard.h  Colors.h  DrawList.h  GameController.h  Graphics3D.h  RobotInterface.h  SimControlPanel.h  Simulation.h  SimulatorWindow.h  TerrainSettings.h  common_types.h  interface_lcm_interface.h  main_window.h  mini_cheetah_graphics.h  obj_loader.h  robot_lcm_handler.h  sim_lcm_handler.h  sim_utilities.h  simgraphics_window.h  simulator_math.h  simulator_state.h  spi_debug.h  ti_boardcontrol.h
sim/src/: Checkerboard.cpp  DrawList.cpp  GameController.cpp  Graphics3D.cpp  RobotInterface.cpp  SimControlPanel.cpp  SimControlPanel.ui  Simulation.cpp  SimulatorWindow.cpp  SimulatorWindow.ui  TerrainSettings.cpp  interface_lcm_interface.cpp  main.cpp  main_window.cpp  mini_cheetah_graphics.cpp  obj_loader.cpp  robot_lcm_handler.cpp  sim_utilities.cpp  simulator_math.cpp  spi_debug.ui  ti_boardcontrol.cpp
user/MIT_Controller/: CMakeLists.txt  DesiredStateCommand.cpp  DesiredStateCommand.h  MIT_Controller.cpp  MIT_Controller.hpp  MIT_UserParameters.h  main.cpp
user/WBC_Controller/: CMakeLists.txt  WBC_Controller.cpp  WBC_Controller.hpp
(+896 files in other folders)
